# connect4-agent

./: .gitignore  README.md  main.py  presentation.md  proposal.md  pyproject.toml  report.md  report_outline.md  requirements.txt
assets/: presentation.md  report_outline2.md
recordings/: agent_evaluation.cast  run_final_1.cast  run_final_2.cast  train_16.cast
results/: test_results_2024-12-01_00-36-31.md  test_results_2024-12-07_15-20-24.md
src/: agent.py  agent_evaluation.py  config.py  game_state.py  logger.py  main.py  mcts_agent.py  negamax_agent.py  position_classifier.py  random_agent.py
