[project]
name = "connect4-agent"
version = "0.1.0"
description = "Connect 4 Agent using Negamax, Gradient Boosting, and Monte Carlo Methods"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.1.3",
  "pandas>=2.2.3",
  "requests>=2.32.3",
  "scikit-learn>=1.5.2",
  "tqdm>=4.67.1",
]
